# 18_EXO_nRF54L15_NCS

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  prj.conf  xiao_nrf54l15_nrf54l15_cpuapp.overlay  引脚分配.xlsx
app_ble_receiver/: CMakeLists.txt  Kconfig  prj.conf
app_ble_receiver/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
app_ble_receiver/dts/bindings/: stm32-slave.yaml
app_ble_receiver/src/: ble_sensor_gateway.cpp  ble_sensor_gateway.hpp  main.cpp  pressure_insole.c  pressure_insole.h  wit_imu.c  wit_imu.h
app_esb_foot/foot_common/boards/: xiao_foot_sensors.overlay
app_esb_foot/foot_common/dts/bindings/: ads122c04.yaml  bno08x.yaml  pcap01.yaml
app_esb_foot/foot_common/src/: main.cpp
app_esb_foot/left/: CMakeLists.txt  Kconfig  prj.conf
app_esb_foot/left/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
app_esb_foot/right/: CMakeLists.txt  prj.conf
app_esb_receiver/: CMakeLists.txt  Kconfig  prj.conf
app_esb_receiver/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
app_esb_receiver/dts/bindings/: ads1220.yaml
app_esb_receiver/src/: main.cpp
app_nus_bridge/: CMakeLists.txt  Kconfig  prj.conf
app_nus_bridge/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
app_nus_bridge/src/: main.cpp
common/: CMakeLists.txt  Kconfig
common/boards/: xiao_base.overlay
common/inc/: SparkFun_ADS122C04_Library.hpp  SparkFun_BNO08x_Library.hpp  bsp_adc.h  bsp_ads1220.hpp  bsp_ble.h  bsp_ble_central.h  bsp_ble_periph.h  bsp_esb.h  bsp_led.h  bsp_mlx90393.hpp  bsp_uart.h  exo_node.h  main.h  pcap01.hpp  sh2.h  sh2_SensorValue.h  sh2_err.h  sh2_hal.h  shtp.h
common/src/: SparkFun_ADS122C04_Library.cpp  SparkFun_BNO08x_Library.cpp  bsp_adc.c  bsp_ads1220.cpp  bsp_ble.c  bsp_ble_central.c  bsp_ble_periph.c  bsp_esb.c  bsp_led.c  bsp_mlx90393.cpp  bsp_uart.c  exo_data.c  pcap01.cpp  sh2.c  sh2_SensorValue.c  sh2_util.c  shtp.c
dts/bindings/: ads122c04.yaml  bno08x.yaml  vnd.bno08x.yaml
inc/: SparkFun_ADS122C04_Library.hpp  SparkFun_BNO08x_Library.hpp  app_uart.h  bsp_adc.h  bsp_ads1220.hpp  bsp_ble.h  bsp_esb.h  bsp_led.h  bsp_mlx90393.hpp  bsp_vofa.h  main.h
src/: SparkFun_ADS122C04_Library.cpp  SparkFun_BNO08x_Library.cpp  app_uart.c  bsp_adc.c  bsp_ads1220.cpp  bsp_ble.c  bsp_esb.c  bsp_led.c  bsp_mlx90393.cpp  bsp_vofa.c  main.cpp  vofa.cpp
